Refactor code to modularize application and add docstrings for clarity

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 WEATHER_API_KEY=81e26e9b8b4d48c58d622421240109
 EMAIL_USER=nsrf95@gmail.com
 EMAIL_PASS=xnsc baju geus reit
+FLASK_ENV=development
+
