--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
+# Virtual environment
 venv/
+
+# IDE configuration files
+.vscode/
+.idea/
+
+# Compiled Python files
+__pycache__/
+*.pyc
+*.pyo
+
+# Environment configuration files
+.env
+.env.*
+
+# Log files
+*.log
+logs/
+
+# Node.js dependencies (if any)
+node_modules/
+
+# Database files
+*.db
+*.sqlite3
+
+# Build and distribution files
+build/
+dist/
+*.egg-info/
+
+# Temporary files
+*~
+*.swp
+*.swo
